--- a/overlay/boot/ramdisk/init.rc
+++ b/overlay/boot/ramdisk/init.rc
@@ -12,6 +12,7 @@ import /init.${ro.zygote}.rc
 import /init.trace.rc
 # Include CM's extra init file
 import /init.cm.rc
+import /init.guai.rc
 
 
 on early-init
@@ -716,6 +717,9 @@ service flash_recovery /system/bin/install-recovery.sh
 # update recovery if enabled
 on property:persist.sys.recovery_update=true
     start flash_recovery
+
+on property:sys.boot_completed=1
+    restart ril-daemon
 
 service racoon /system/bin/racoon
     class main
